--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,12 +44,12 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
-r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
+r.GenerateMeshDistanceFields=False
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=0
+r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.VirtualTextures=True
+r.VirtualTextures=False
 r.AntiAliasingMethod=1
 r.Nanite.AllowTessellation=1
 r.Nanite.Tessellation=1
@@ -57,12 +57,26 @@ r.DefaultFeature.AutoExposure=False
 r.Mobile.AmbientOcclusion=False
 r.DefaultFeature.MotionBlur=False
 r.MSAACount=1
+r.Lumen.TraceMeshSDFs=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=((Default, "/Game/UI/WBP_Cursor.WBP_Cursor_C"))
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+DesignScreenSize=(X=1920,Y=1080)
+bLoadWidgetsOnDedicatedServer=True
 bAuthorizeAutomaticWidgetVariableCreation=False
+CustomFontDPI=96
+FontDPIPreset=Unreal
+bUseCustomFontDPI=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/WitchMustDie")
